  Powell)
- Fixed last track check in some functions (Thanks again to Robin Lee Powell)
- Split command routines in to separate files and clean up help/execution
- Implemented CHANNEL OUTPUT ADD and CHANNEL OUTPUT REMOVE
- Added 'downmix' icecast option for converting to mono output
- Added resampling at different sample rates using libsamplerate if available

0.40 - Nov 1st 2003
-------------------
- HISTORY now takes parameters for number of entries to display, and where
  to start from.  Mserv now remembers last 100 played tracks (compile option)
- QUEUE now is fairer when there are more than 2 users trying to queue songs,
  interspersing the tracks correctly
- Fixed tagline to HELP to give thanks
- Fixed queuing of last track, bug introduced in 0.39
- Separate out channel functions from output functions
- Modularise the icecast output routines (uses libtool/libltdl)
- Do our own time keeping (for re-introducing soundcard support)
- Allow multiple output streams on each channel (for doing icecast+soundcard)
- Introduce concept of primary volume controllers
- Added snprintf checks in autoconf
- Fixed mservcli library discard loop (thanks to Thomas Munro)
- Renamed soundcard.h to mservsoundcard.h (requested by David Brownlee)
- New license
- Fixed overflow bug in options parsing (thanks to Sam Couter)

0.39 - Sep 13th 2003
--------------------
- Default configuration is now written to config.dist on load (if it can)
- Album and author lists are now dynamically allocated in the same way as
  genre lists, so no more compiled limit on tracks per album
- Fixed off-by-one error in -r command line option
- Report an error on start-up if an old configuration file is used
- Most debugging is now on -d command line option rather than compile-time
- Better debugging messages in Icecast output engine
- Log people connecting to Mserv
- Fixed ogg player line in configuration file

0.38a - Aug 31st 2003
---------------------
- Fixed compilation problem